--- a/dataShow/src/components/CsvToJSON/CSVToJson.module.css
+++ b/dataShow/src/components/CsvToJSON/CSVToJson.module.css
@@ -1,7 +1,55 @@
 
-th{
-    padding-right: 1em;
+
+.nav-container {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: rgba(255,255,255,0.35);
+-webkit-backdrop-filter: blur(5px);
+backdrop-filter: blur(5px);
+border: 0px solid rgba(255,255,255,0.175);
 }
+.filter-container{
+    margin:  0;
+
+    padding:1em .5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+.btn-container{
+    display: flex;
+  justify-content: flex-end;
+}
+.reset-btn{
+    padding:.5em;
+    margin:.5em
+}
+.help-btn{
+    border-radius: 50%;
+    padding:.5em;
+    margin:.5em
+}
+thead {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 120px;
+    border: none;
+    background: rgba(255,255,255,0.35);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 0px solid rgba(255,255,255,0.175);
+    text-align: center;
+}
+th{
+    padding: .5em;
+}
+table{
+    border-collapse: collapse;
+}
+
+/*aux*/
 .true{
     color:green
 }
