--- a/dataShow/src/components/CsvToJSON/CSVToJson.module.css
+++ b/dataShow/src/components/CsvToJSON/CSVToJson.module.css
@@ -9,15 +9,12 @@
 backdrop-filter: blur(5px);
 border: 0px solid rgba(255,255,255,0.175);
 }
-.filter-container{
-    margin:  0;
-
-    padding:1em .5em;
+.table-container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-   
+    justify-content: center;
+    align-items: flex-start;
 }
+
 .btn-container{
     display: flex;
   justify-content: flex-end;
@@ -31,10 +28,32 @@ border: 0px solid rgba(255,255,255,0.175);
     padding:.5em;
     margin:.5em
 }
+/*filter styles*/
+.filter-container{
+    margin:  0;
+
+    padding:1em .5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.filter-element{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+}
+label{
+    text-align: left;
+}
+
+/*table styles*/
 thead {
     position: -webkit-sticky;
     position: sticky;
-    top: 120px;
+    top: 0px;
     border: none;
     background: rgba(255,255,255,0.35);
     -webkit-backdrop-filter: blur(5px);
