--- a/dataShow/src/App.css
+++ b/dataShow/src/App.css
@@ -1,28 +1,10 @@
 #root {
   
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+  padding: 1rem;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+ width: 100%;
 }
 
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
-}
