--- a/dataShow/src/components/FilterComponent/filterComponent.module.css
+++ b/dataShow/src/components/FilterComponent/filterComponent.module.css
@@ -1,5 +1,8 @@
 
-
+.mega-container{
+    width: 100%;
+    height: 100%;
+}
 .nav-container {
     position: -webkit-sticky;
     position: sticky;
@@ -52,6 +55,27 @@ label{
 th{
     border: none !important;
 }
+
+.spinner {
+    width: 11.2px;
+    height: 11.2px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute; /* or position: relative; */
+    top: 50%;
+    
+    left: 0;
+    right: 0;
+    border-radius: 11.2px;
+    box-shadow: 28px 0px 0 0 rgba(71,75,255,0.2), 22.7px 16.5px 0 0 rgba(71,75,255,0.4), 8.68px 26.6px 0 0 rgba(71,75,255,0.6), -8.68px 26.6px 0 0 rgba(71,75,255,0.8), -22.7px 16.5px 0 0 #474bff;
+    animation: spinner-b87k6z 1s infinite linear;
+ }
+ 
+ @keyframes spinner-b87k6z {
+    to {
+       transform: rotate(360deg);
+    }
+ }
 
 
 
