--- a/dataShow/src/components/FilterComponent/filterComponent.module.css
+++ b/dataShow/src/components/FilterComponent/filterComponent.module.css
@@ -51,8 +51,35 @@ label{
     text-align: left;
 }
 
+thead{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: rgba(255,255,255,0.4);
+    -webkit-backdrop-filter: blur(38px);
+    backdrop-filter: blur(38px);
+    border: 1px solid rgba(255,255,255,0.2);
+    text-align: center;
+}
+
 th{
     border: none !important;
+}
+
+.act-exp-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.act-exp{
+    height: auto;
+    overflow-y: hidden;
+}
+.act-not-exp{
+    height: 100px;
+    overflow-y: hidden;
 }
 
 .spinner {
