--- a/dataShow/src/components/FilterComponent/filterComponent.module.css
+++ b/dataShow/src/components/FilterComponent/filterComponent.module.css
@@ -13,10 +13,14 @@ backdrop-filter: blur(5px);
 border: 0px solid rgba(255,255,255,0.175);
 }
 
-
+.search-container{
+    display: flex;
+    flex-direction: column;
+}
 .btn-container{
     display: flex;
-  justify-content: flex-end;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 .reset-btn{
     padding:.5em;
@@ -28,7 +32,11 @@ border: 0px solid rgba(255,255,255,0.175);
     margin:.5em
 }
 
+/*offset canvas*/
 
+.offset-img{
+    width: 200px;
+}
 
 /*filter styles*/
 .filter-container{
@@ -54,10 +62,12 @@ label{
 
 tr {
     text-align: center;
+   
   }
   
   td, th {
     vertical-align: middle;
+    empty-cells: hide;
   }
 
 thead{
@@ -71,9 +81,7 @@ thead{
     text-align: center;
 }
 
-th{
-    border: none !important;
-}
+
 
 .act-exp-container{
     display: flex;
@@ -125,7 +133,6 @@ th{
        transform: rotate(360deg);
     }
  }
-
 
 
 
