--- a/dataShow/src/components/Modal/Modal.module.css
+++ b/dataShow/src/components/Modal/Modal.module.css
@@ -17,7 +17,7 @@
   
   .modalContent {
     background-color: #fefefe;
-    margin: 15% auto;
+    margin: 5em auto;
     padding: 20px;
     border: 1px solid #888;
     border-radius: 10px;
