--- a/dataShow/src/components/FilterComponent/filterComponent.module.css
+++ b/dataShow/src/components/FilterComponent/filterComponent.module.css
@@ -45,7 +45,14 @@ border: 0px solid rgba(255,255,255,0.175);
     line-height: 0;
  
 }
-
+.img-logo{
+    width:100px;
+    margin:.5em auto;
+}
+.img-sorry{
+    width: 300px;
+margin: 1em auto;
+}
 .custom-shape-divider-bottom-1685701521 svg {
     position: relative;
     display: block;
@@ -72,7 +79,7 @@ border: 0px solid rgba(255,255,255,0.175);
 .filter-element{
     display: flex;
     flex-direction: column;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 label{
     text-align: left;
@@ -126,6 +133,19 @@ thead{
     justify-content: center;
 }
 
+.utilities-bar{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+.utilities-bar-single{
+    justify-content: flex-end;
+}
+.select-filter-img{
+    width: 200px;
+}
 .display-selection{
     display: flex;
     flex-wrap: nowrap;
@@ -176,6 +196,30 @@ thead{
 }
 .closed{
     color: red !important;
+}
+
+.total-bar{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    margin:1em  0;
+
+    justify-content: space-between;
+}
+.total-bar-elements{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+.bar{
+    width: 100%;
+}
+.bar> *:nth-child(n){
+background-color: #1C7881;
+
+overflow: visible;
+
 }
 
 /*media queries*/
