--- a/dataShow/src/components/Modal/Modal.module.css
+++ b/dataShow/src/components/Modal/Modal.module.css
@@ -16,7 +16,10 @@
   }
   
   .modalContent {
-    background-color: #fefefe;
+    background: rgba(255,255,255,0.45);
+    -webkit-backdrop-filter: blur(9px);
+    backdrop-filter: blur(9px);
+    border: 1px solid rgba(255,255,255,0.225);
     margin: 5em auto;
     padding: 20px;
     border: 1px solid #888;
@@ -25,6 +28,10 @@
     width: 80%;
    
     color: black;
+  }
+
+  .modalContent-noSelection{
+    max-width: 400px;
   }
   
   .close {
