--- a/dataShow/src/components/CsvToJSON/CSVToJson.module.css
+++ b/dataShow/src/components/CsvToJSON/CSVToJson.module.css
@@ -1,6 +1,6 @@
 
 .csvToJson-container {
- 
+  width: 100%;
   height: 100vh;
 }
 .drawer-overlay{
@@ -38,12 +38,13 @@ flex-direction: column;
   top: 0;
   right: 50%;
 
- 
+  transform: translateX(50%);
   background-color: #1C7881;
   border: none;
   margin: 0;
-  padding: .3em .5em;
+  padding: 0 .5em;
   cursor: pointer;
+  margin-top: .3em;
  
   
 }
@@ -66,6 +67,7 @@ flex-direction: column;
 
 .topBar-container {
   padding: 20px;
+  
 }
 
 .input-container {
@@ -77,9 +79,7 @@ flex-direction: column;
   justify-content: center;
 }
 
-.modal {
-  /* Styles for the modal */
-}
+
 
 .topBar-container{
   display: flex;
@@ -111,10 +111,17 @@ flex-direction: column;
   width: 150px;
 }
  /*Input btn */
+.input-text-container{
+  display: flex;
+  align-items: baseline;
+}
+
 
  input[type="file"] {
+  width: 160px;
   outline: none;
   padding: 8px 4px;
+  margin:.5em 0;
 
 }
 
