--- a/dataShow/src/components/CsvToJSON/CSVToJson.module.css
+++ b/dataShow/src/components/CsvToJSON/CSVToJson.module.css
@@ -2,6 +2,9 @@
 .csvToJson-container {
   width: 100%;
   height: 100vh;
+
+    z-index: 10;
+    position: absolute;
 }
 .drawer-overlay{
 position: fixed; /* Sit on top of the page content */
