--- a/dataShow/src/components/CsvToJSON/CSVToJson.module.css
+++ b/dataShow/src/components/CsvToJSON/CSVToJson.module.css
@@ -4,7 +4,7 @@
   height: 100vh;
 
     z-index: 10;
-    position: absolute;
+   
 }
 .drawer-overlay{
 position: fixed; /* Sit on top of the page content */
@@ -72,7 +72,7 @@ flex-direction: column;
 .drawer-toggle-button {
   position: absolute;
  width: 300px;
-  top: 0;
+ top: 1.5em;
   right: 50%;
 
   transform: translateX(50%);
