--- a/dataShow/src/components/FilterComponent/filterComponent.module.css
+++ b/dataShow/src/components/FilterComponent/filterComponent.module.css
@@ -145,6 +145,9 @@ thead{
 }
 .select-filter-img{
     width: 200px;
+    position: relative;
+    right: 25%;
+    top: 150px;
 }
 .display-selection{
     display: flex;
