--- a/dataShow/src/components/Modal/Modal.module.css
+++ b/dataShow/src/components/Modal/Modal.module.css
@@ -1,51 +1,50 @@
 /* Modal.module.css */
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-  }
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
-  .open {
-    display: block;
-  }
-  
-  .modalContent {
-    background: rgba(255,255,255,0.45);
-    -webkit-backdrop-filter: blur(9px);
-    backdrop-filter: blur(9px);
-    border: 1px solid rgba(255,255,255,0.225);
-    margin: 5em auto;
-    padding: 20px;
-    border: 1px solid #888;
-    border-radius: 10px;
-    max-width: 1400px;
-    width: 80%;
-   
-    color: black;
-  }
+.open {
+  display: block;
+}
 
-  .modalContent-noSelection{
-    max-width: 400px;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+.modalContent {
+  background: rgba(255, 255, 255, 0.45);
+  -webkit-backdrop-filter: blur(9px);
+  backdrop-filter: blur(9px);
+  border: 1px solid rgba(255, 255, 255, 0.225);
+  margin: 5em auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  max-width: 1400px;
+  width: 80%;
+
+  color: black;
+}
+
+.modalContent-noSelection {
+  max-width: 400px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
