--- a/dataShow/src/components/LanguageSelector/languageSelector.module.css
+++ b/dataShow/src/components/LanguageSelector/languageSelector.module.css
@@ -70,9 +70,18 @@
   line-height: 1.2;
   color: white;
 }
+.lang-dropdown-blue {
+  display: block;
+  background: #ffffff;
+
+  -webkit-backdrop-filter: blur(9px);
+  backdrop-filter: blur(9px);
+  border-radius: 5px;
+  margin-top: 2px;
+}
 .lang-dropdown {
-  display: none;
-  background: #74777786;
+  display: block;
+  background-color: #1c7881;
 
   -webkit-backdrop-filter: blur(9px);
   backdrop-filter: blur(9px);
@@ -121,15 +130,24 @@ li {
     z-index: 1;
   }
   .lang-dropdown {
-    display: none;
-    background: #74777786;
-    padding: 5px;
+    background-color: #1c7881;
+    padding: 0px;
     -webkit-backdrop-filter: blur(9px);
     backdrop-filter: blur(9px);
     border-radius: 5px;
     margin-top: 2px;
     position: absolute;
-    top: 4em;
-    left: -21.3em;
+    top: 1.5em;
+    left: -15.3em;
+  }
+  .lang-dropdown-blue {
+    display: block;
+    background: #ffffff;
+
+    -webkit-backdrop-filter: blur(9px);
+    backdrop-filter: blur(9px);
+    border-radius: 5px;
+    margin-top: 2px;
+    margin-top: 2px;
   }
 }
